Update Travis setup.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
 
 before_install:
   - brew update
+  - brew unlink carthage
   - brew install carthage
   - carthage bootstrap --no-use-binaries --platform ios
 
