--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
 language: objective-c
 matrix:
-  include:
-    - osx_image: xcode8.2.1
+    include:
+        - osx_image: xcode8.2.1
 
 before_install:
-  - brew update
-  - brew unlink carthage
-  - brew install carthage
-  - carthage update --platform ios 
+    - brew update
+    - brew unlink carthage
+    - brew install carthage
+    - carthage bootstrap --no-use-binaries --platform ios
 
 script:
-  - xcodebuild -scheme cqnt -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=10.1,name=iPhone 7' -configuration Debug test | xcpretty -c
+    - xcodebuild -scheme cqnt -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=10.1,name=iPhone 7' -configuration Debug test | xcpretty -c
