--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,4 @@ before_install:
     - carthage bootstrap --no-use-binaries --platform ios
 
 script:
-    - xcodebuild -scheme cqnt -sdk iphonesimulator -destination 'platform=iOS Simulator,OS=10.2,name=iPhone 7' -configuration Debug test | xcpretty -c
+  - xcodebuild -scheme cqnt -sdk iphonesimulator -destination 'platform=iOS Simulator,id=E40727B3-41FB-4D6E-B4CB-BFA87109EB12,OS=10.2,name=iPhone 7' -configuration Debug test | xcpretty -c
